# fermix

./: Cargo.toml  Dockerfile  docker-compose.yml
backend/: Cargo.toml
backend/src/: blockchain.rs  main.rs
backend/src/migrations/: 20231001000000_create_blocks.sql
frontend/: index.html
