[package]
name = "rustchain-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
